<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blurred_back"
    tools:context=".login.UserNewInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/NU_TOP_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/NU_top_guideline" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/NU_BOTTOM_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="1." />

            <EditText
                android:id="@+id/NU_FirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/NU_left_margin"
                android:layout_marginTop="@dimen/NU_between_field_margin"
                android:ems="10"
                android:hint="@string/first_name"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"
                android:textColor="@color/green_blue_crayola"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NU_TOP_guideline"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/NU_deleteProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/NU_FirstName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/NU_FirstName"
                android:background="@android:color/transparent"
                android:text="@string/delete_profile"
                android:onClick="deleteProfile"
                android:textColor="@color/light_red" />

            <EditText
                android:id="@+id/NU_LastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/NU_left_margin"
                android:layout_marginTop="@dimen/NU_between_field_margin"
                android:ems="10"
                android:hint="@string/last_name"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"
                android:textColor="@color/green_blue_crayola"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NU_FirstName" />

            <ImageView
                android:id="@+id/NU_profileImageView"
                android:contentDescription="@string/profilePicDescriptionText"
                android:layout_width="@dimen/NU_image_size"
                android:layout_height="@dimen/NU_image_size"
                android:layout_marginTop="@dimen/NU_between_field_margin"
                app:layout_constraintStart_toEndOf="@+id/NU_editProfilePicture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NU_LastName"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/NU_editProfilePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/NU_left_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/NU_profileImageView"
                android:textColor="@color/green_blue_crayola"
                android:background="@android:color/transparent"
                android:onClick="choosePicture"
                android:text="@string/nu_chose_profile_picture" />

            <Button
                android:id="@+id/NU_resetProfilePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/NU_editProfilePicture"
                app:layout_constraintStart_toStartOf="@+id/NU_editProfilePicture"
                app:layout_constraintTop_toBottomOf="@+id/NU_editProfilePicture"
                android:background="@android:color/transparent"
                android:minWidth="0sp"
                android:minHeight="0sp"
                android:onClick="resetProfilePicture"
                android:text="@string/reset"
                android:textColor="@color/light_red"
                android:textSize="9sp"/>


            <EditText
                android:id="@+id/NU_pseudo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/NU_left_margin"
                android:layout_marginTop="@dimen/NU_between_field_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/NU_editProfilePicture"
                android:digits="@string/Pseudo_AvailableChars"
                android:ems="10"
                android:hint="@string/text_pseudo"
                android:textColorHint="@color/white"
                android:inputType="textFilter"
                android:maxLength="@integer/pseudo_maxLength"
                android:textColor="@color/green_blue_crayola"
                tools:ignore="TouchTargetSizeCheck" />


            <Button
                android:id="@+id/NU_select_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/NU_left_margin"
                android:layout_marginTop="@dimen/NU_between_field_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NU_pseudo"
                android:backgroundTint="@color/green_blue_crayola"
                android:textColor="@color/green_blue_crayola"
                android:background="@android:color/transparent"
                android:onClick="selectBirthdate"
                android:text="@string/select_birthdate"/>

            <Button
                android:id="@+id/NU_reset_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/NU_select_birthdate"
                app:layout_constraintStart_toStartOf="@+id/NU_select_birthdate"
                app:layout_constraintTop_toBottomOf="@+id/NU_select_birthdate"
                android:background="@android:color/transparent"
                android:minWidth="0sp"
                android:minHeight="0sp"
                android:onClick="resetBirthdate"
                android:text="@string/reset"
                android:textColor="@color/light_red"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/NU_selected_birthdate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/NU_left_margin"
                app:layout_constraintStart_toEndOf="@+id/NU_select_birthdate"
                app:layout_constraintBaseline_toBaselineOf="@+id/NU_select_birthdate"
                android:text="@string/no_birthdate_selected"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/NU_select_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/NU_left_margin"
                android:layout_marginTop="@dimen/NU_between_field_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NU_select_birthdate"
                android:text="@string/select_your_gender" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="Gender"
                android:backgroundTint="@color/cadet_blue_crayola"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="@+id/NU_select_gender"
                app:layout_constraintEnd_toEndOf="@+id/NU_select_gender"
                app:layout_constraintTop_toBottomOf="@+id/NU_select_gender" />

            <EditText
                android:id="@+id/NU_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/NU_left_margin"
                android:layout_marginTop="@dimen/NU_between_field_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender_spinner"
                android:ems="10"
                android:hint="@string/describe_yourself"
                android:textColorHint="@color/white"
                android:inputType="textMultiLine"
                android:maxLength="@integer/self_description_max_length"
                android:maxLines="@integer/max_lines_user_desc"
                android:textColor="@color/green_blue_crayola" />

            <Button
                android:id="@+id/NU_Cancel_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/NU_between_field_margin"
                android:layout_marginBottom="@dimen/NU_between_field_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/NU_Confirm_Btn"
                app:layout_constraintTop_toBottomOf="@+id/NU_description"
                app:layout_constraintBottom_toBottomOf="@+id/NU_BOTTOM_guideline"
                android:background="@android:color/transparent"
                android:onClick="cancel"
                android:text="@android:string/cancel"
                android:textColor="@color/light_red"/>

            <Button
                android:id="@+id/NU_Confirm_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/NU_Cancel_Btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/NU_Cancel_Btn"
                android:background="@android:color/transparent"
                android:onClick="confirm"
                android:text="@string/confirm"
                android:textColor="@color/light_red"
                android:textStyle="italic" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>