...
    <string name="multi">MULTI</string>
    <string name="profile">Profile</string>
    <string name="logout">LOGOUT</string>
    <string name="Btn_email">Email</string>
    <string name="Btn_google">Google</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="Btn_anonymous">Guest</string>

    <!--  GameUtil  -->
    <string name="logo_description">Logo of the application</string>
    <string name="format_description"> Survival : Description placeholder
    |Against the Clock :
...
    <string name="elo">ELO:</string>

    <!-- chars for Pseudo -->
    <string name="Pseudo_AvailableChars">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>

    <!-- Alert Dialogue-->
    <string name="new_user_wrong_pseudo_title">Profile Creation Alert</string>
    <string name="new_user_wrong_pseudo_text">Please, <b>enter a valid Pseudo</b>\n\nYour pseudo should be at least <b>2</b> characters, but <b>not \"Pseudo\"</b></string>

    <!-- DatePicker -->
    <string name="new_user_birthdatePicker">Please, enter your Birthdate.</string>


...
